2002-02-19  Radek Doulik  <rodo@ximian.com>

	* mono/tests/libtest.c (mono_test_many_short_arguments): new test
	method
	(mono_test_many_byte_arguments): ditto

2002-02-18  Radek Doulik  <rodo@ximian.com>

	* mono/tests/Makefile.am: added small test library for pinvoke
	testing

	* mono/tests/libtest.c (mono_test_many_int_arguments): new file,
	new function to test pinvoke

	* mono/tests/pinvoke.cs (Test): added pinvoked method with 10 int
	arguments

	* mono/tests/Makefile.am: display # of passing tests too
	added simple shared library libtest with testing function for
	pinvoke

2002-02-17  Radek Doulik  <rodo@ximian.com>

	* mono/tests/Makefile.am (test): display # of failed tests

2002-02-16  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Add checks for SOL_IP, SOL_TCP, and
	IP_PKTINFO. Also check for struct ip_mreqn.

2002-02-14  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Add checks to see if we need to link to libsocket,
	libnsl, and/or librt. Also check for inet_pton and inet_aton.

2002-02-13  Jeffrey Stedfast  <fejj@ximian.com>

	* acconfig.h: #undef USE_MONO_MUTEX

	* configure.in: If the system pthread implementation is lacking,
	default to using mono-mutex.

2002-02-05  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/enum2.cs: new file with more enum tests.

2002-02-01  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/jit-long.cs: added some SHL/SHR tests

Fri Feb 1 15:32:36 CET 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: allow PKG_CONFIG_PATH for the build-platform
	pkg-config invocation.

Fri Feb 1 15:13:25 CET 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: add some support/fixes for cross-compilation.

2002-01-14  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/exception6.cs: new tests for ADD_OVF, MUL_OVF
	added tests for SUB_OVF, SUB_OVF_UN

2001-12-21  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/Makefile.am (TESTSRC): disabled stream-writer test

2001-12-21  Aaron Weber  <aaron@ximian.com>
